Details
-
Bug
-
Status: Closed
-
Not Evaluated
-
Resolution: Done
-
Qt Creator 4.4.0
-
None
Description
There was apparently some development in the clang query plugin between 4.3 and 4.4. The current state looks more like a work in progress. What is the user supposed to type where?Would at least a label have helped?
Attachments
For Gerrit Dashboard: QTCREATORBUG-18815 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
204117,2 | Clang: Add placeholder text to Clang Query | 4.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
204564,2 | TextEditor: Fix painting with frame turned on | 4.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |