Clang: Add placeholder text to Clang Query

Task-number: QTCREATORBUG-18815
Change-Id: Ie5d53f0b3f2464408bb09022483a3a6258e8173d
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>